--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -13,12 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Generate GitHub Stats
         run: |
           curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=KimGSeok&show_icons=true&theme=radical&count_private=true&include_all_commits=true&token=${{ secrets.GH_TOKEN }}"
-          echo "![GitHub stats](./stats.svg)" > README.md
+          curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=KimGSeok&token=${{ secrets.GH_TOKEN }}"
+          echo '![KimGSeok's GitHub stats](./stats.svg)' > README.md
+          echo '![Top Langs](./top-langs.svg)' >> README.md
 
       - name: Commit Changes
         run: |
@@ -27,3 +29,6 @@ jobs:
           git add README.md
           git commit -m "Update GitHub stats"
           git push
+
+
+
