--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -16,19 +16,55 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate GitHub Stats
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=KimGSeok&show_icons=true&theme=radical&count_private=true&include_all_commits=true&token=${{ secrets.GH_TOKEN }}"
           curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=KimGSeok&token=${{ secrets.GH_TOKEN }}"
-          echo '![KimGSeok'"'"'s GitHub stats](./stats.svg)' > README.md
-          echo '![Top Langs](./top-langs.svg)' >> README.md
           
+      - name: Update README
+        run: |
+          echo '# KimGSeok' > README.md
+          echo '![KimGSeok'"'"'s GitHub stats](./stats.svg)' >> README.md
+          echo '![Top Langs](./top-langs.svg)' >> README.md
+          echo '' >> README.md
+          echo '<!--' >> README.md
+          echo '**kimGyeongSeok-web/kimGyeongSeok-web** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.' >> README.md
+          echo '' >> README.md
+          echo 'Here are some ideas to get you started:' >> README.md
+          echo '' >> README.md
+          echo '- 🔭 I’m currently working on ...' >> README.md
+          echo '- 🌱 I’m currently learning ...' >> README.md
+          echo '- 👯 I’m looking to collaborate on ...' >> README.md
+          echo '- 🤔 I’m looking for help with ...' >> README.md
+          echo '- 💬 Ask me about ...' >> README.md
+          echo '- 📫 How to reach me: ...' >> README.md
+          echo '- 😄 Pronouns: ...' >> README.md
+          echo '- ⚡ Fun fact: ...' >> README.md
+          echo '-->' >> README.md
+          echo '' >> README.md
+          echo '<img src="https://img.shields.io/badge/React-61DAFB?style=flat&logo=react&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/Next-000000?style=flat&logo=nextdotjs&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=flat&logo=javascript&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/TypeScript-3178C6?style=flat&logo=typescript&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/ReactQuery-FF4154?style=flat&logo=reactquery&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/Recoil-3578E5?style=flat&logo=recoil&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/Emotion-3578E5?style=flat&logo=recoil&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/TailwindCSS-3578E5?style=flat&logo=recoil&logoColor=white"/>' >> README.md
+          echo '<img src="https://img.shields.io/badge/SASS-CC6699?style=flat&logo=sass&logoColor=white"/>' >> README.md
+          echo '<!-- tailwindcss -->' >> README.md
+          echo '<!-- styled-components -->' >> README.md
+          echo '<!-- SCSS -->' >> README.md
+          echo '<!-- Jquery -->' >> README.md
+          echo '<!-- git -->' >> README.md
+          echo '<!-- BE -->' >> README.md
+          echo '<!-- node.js -->' >> README.md
+          echo '<!-- nest.js -->' >> README.md
+
       - name: Commit Changes
         run: |
           git config --global user.name 'KimGSeok'
           git config --global user.email 'rla99tjr@gmail.com'
-          git add .
+          git add README.md stats.svg top-langs.svg
           git commit -m "Update GitHub stats"
           git push
-
-
-
