--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -20,7 +20,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           curl -o stats.svg "https://github-readme-stats.vercel.app/api?username=KimGSeok&show_icons=true&theme=radical&count_private=true&include_all_commits=true&token=${{ secrets.GH_TOKEN }}"
-          curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=KimGSeok&token=${{ secrets.GH_TOKEN }}"
+          curl -o top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=KimGSeok&show_icons=true&theme=radical&count_private=true&include_all_commits=true&token=${{ secrets.GH_TOKEN }}"
           
       - name: Update README
         run: |
