--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,7 +28,7 @@ jobs:
           echo '![KimGSeok'"'"'s GitHub stats](./stats.svg)' >> README.md
           echo '![Top Langs](./top-langs.svg)' >> README.md
           echo '' >> README.md
-          echo '<!--' >> README.md
+          echo ' >> README.md
           echo '**kimGyeongSeok-web/kimGyeongSeok-web** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.' >> README.md
           echo '' >> README.md
           echo 'Here are some ideas to get you started:' >> README.md
@@ -41,7 +41,6 @@ jobs:
           echo '- 📫 How to reach me: ...' >> README.md
           echo '- 😄 Pronouns: ...' >> README.md
           echo '- ⚡ Fun fact: ...' >> README.md
-          echo '-->' >> README.md
           echo '' >> README.md
           echo '<img src="https://img.shields.io/badge/React-61DAFB?style=flat&logo=react&logoColor=white"/>' >> README.md
           echo '<img src="https://img.shields.io/badge/Next-000000?style=flat&logo=nextdotjs&logoColor=white"/>' >> README.md
