--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -24,23 +24,22 @@ jobs:
           
       - name: Update README
         run: |
-          echo '# KimGSeok' > README.md
-          echo '![KimGSeok'"'"'s GitHub stats](./stats.svg)' >> README.md
-          echo '' >> README.md
-          echo '![Top Langs](./top-langs.svg)' >> README.md
-          echo '' >> README.md
+          
           echo '**kimGyeongSeok-web/kimGyeongSeok-web** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.' >> README.md
           echo '' >> README.md
           echo 'Here are some ideas to get you started:' >> README.md
           echo '' >> README.md
-          echo '- 🔭 I’m currently working on ...' >> README.md
-          echo '- 🌱 I’m currently learning ...' >> README.md
-          echo '- 👯 I’m looking to collaborate on ...' >> README.md
-          echo '- 🤔 I’m looking for help with ...' >> README.md
-          echo '- 💬 Ask me about ...' >> README.md
-          echo '- 📫 How to reach me: ...' >> README.md
-          echo '- 😄 Pronouns: ...' >> README.md
-          echo '- ⚡ Fun fact: ...' >> README.md
+          echo '## 🔭 Current Projects' >> README.md
+          echo '- **[Tensports](Github URL)**: https://github.com/tennispick' >> README.md
+          echo '- **[Tensports](Project URL)**: https://tennis-pick.com' >> README.md
+          echo '' >> README.md
+          echo '## 🌱 What I'm Learning' >> README.md
+          echo '- 쏙쏙 들어오는 함수형 코딩' >> README.md
+          echo '- 이펙티트 타입스크립트' >> README.md
+          echo '- 테스트 주도 개발 시작하기' >> README.md
+          echo '## 📫 How to reach me' >> README.md
+          echo '- [Email] rla99tjr@gmail.com' >> README.md
+          echo '- [LinkedIn] www.linkedin.com/in/kimgyeongseok' >> README.md
           echo '' >> README.md
           echo '<img src="https://img.shields.io/badge/React-61DAFB?style=flat&logo=react&logoColor=white"/>' >> README.md
           echo '<img src="https://img.shields.io/badge/Next-000000?style=flat&logo=nextdotjs&logoColor=white"/>' >> README.md
@@ -59,6 +58,11 @@ jobs:
           echo '<!-- BE -->' >> README.md
           echo '<!-- node.js -->' >> README.md
           echo '<!-- nest.js -->' >> README.md
+          echo '# KimGSeok' > README.md
+          echo '![KimGSeok'"'"'s GitHub stats](./stats.svg)' >> README.md
+          echo '' >> README.md
+          echo '![Top Langs](./top-langs.svg)' >> README.md
+          echo '' >> README.md
 
       - name: Commit Changes
         run: |
